json-dsl/src/main/java/parse/MingBdJSONParser.java
// Generated from D:/MyWorkSpace/zrDSL-flink/json-dsl/src/main/resources\MingBdJSON.g4 by ANTLR 4.8
package parse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MingBdJSONParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, STRING=42, FUNCNAME=43, BLOCK_STRING=44, 
		NUMBER=45, WS=46;
	public static final int
		RULE_json = 0, RULE_value = 1, RULE_pair = 2, RULE_runtype = 3, RULE_load = 4, 
		RULE_join = 5, RULE_trans = 6, RULE_dataSource = 7, RULE_hbaseSource = 8, 
		RULE_mysqlSource = 9, RULE_mysqlInfo = 10, RULE_mysqlSchema = 11, RULE_transinfo = 12, 
		RULE_select = 13, RULE_groupBy = 14, RULE_filter = 15, RULE_cols = 16, 
		RULE_col = 17, RULE_save = 18, RULE_saveInfo = 19, RULE_kafkaSave = 20, 
		RULE_mysqlSave = 21, RULE_joinpair = 22, RULE_kafkaSource = 23, RULE_field = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"json", "value", "pair", "runtype", "load", "join", "trans", "dataSource", 
			"hbaseSource", "mysqlSource", "mysqlInfo", "mysqlSchema", "transinfo", 
			"select", "groupBy", "filter", "cols", "col", "save", "saveInfo", "kafkaSave", 
			"mysqlSave", "joinpair", "kafkaSource", "field"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "','", "'}'", "'\"runMode\"'", "':'", "'\"stream\"'", "'\"batch\"'", 
			"'\"load\"'", "'['", "']'", "'\"join\"'", "'\"transform\"'", "'\"zkQuorum\"'", 
			"'\"table\"'", "'\"info\"'", "'\"schema\"'", "'\"tableName\"'", "'\"driver\"'", 
			"'\"url\"'", "'\"user\"'", "'\"pass\"'", "'\"query\"'", "'\"from\"'", 
			"'\"to\"'", "'\"distinct\"'", "'true'", "'false'", "'\"group\"'", "'\"condition\"'", 
			"'\"cols\"'", "'\"save\"'", "'\"zk\"'", "'\"btServers\"'", "'\"topic\"'", 
			"'\"types\"'", "'\"inputT\"'", "'\"conditionT\"'", "'\"outputT\"'", "'\"groupId\"'", 
			"'\"nameI\"'", "'\"aliasI\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "STRING", "FUNCNAME", "BLOCK_STRING", 
			"NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MingBdJSON.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MingBdJSONParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class JsonContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitJson(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitJson(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_json);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__0);
			setState(53);
			pair();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(54);
				match(T__1);
				setState(55);
				pair();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public RuntypeContext runtype() {
			return getRuleContext(RuntypeContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public JoinContext join() {
			return getRuleContext(JoinContext.class,0);
		}
		public TransContext trans() {
			return getRuleContext(TransContext.class,0);
		}
		public SaveContext save() {
			return getRuleContext(SaveContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pair);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				runtype();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				load();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				join();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				trans();
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				save();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuntypeContext extends ParserRuleContext {
		public RuntypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_runtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterRuntype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitRuntype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitRuntype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuntypeContext runtype() throws RecognitionException {
		RuntypeContext _localctx = new RuntypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_runtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__3);
			setState(71);
			match(T__4);
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public List<DataSourceContext> dataSource() {
			return getRuleContexts(DataSourceContext.class);
		}
		public DataSourceContext dataSource(int i) {
			return getRuleContext(DataSourceContext.class,i);
		}
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitLoad(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitLoad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_load);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__7);
			setState(75);
			match(T__4);
			setState(76);
			match(T__8);
			setState(77);
			dataSource();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(78);
				match(T__1);
				setState(79);
				dataSource();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JoinContext extends ParserRuleContext {
		public List<JoinpairContext> joinpair() {
			return getRuleContexts(JoinpairContext.class);
		}
		public JoinpairContext joinpair(int i) {
			return getRuleContext(JoinpairContext.class,i);
		}
		public JoinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_join; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterJoin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitJoin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitJoin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JoinContext join() throws RecognitionException {
		JoinContext _localctx = new JoinContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_join);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__10);
			setState(88);
			match(T__4);
			setState(89);
			match(T__8);
			setState(90);
			joinpair();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(91);
				match(T__1);
				setState(92);
				joinpair();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransContext extends ParserRuleContext {
		public List<TransinfoContext> transinfo() {
			return getRuleContexts(TransinfoContext.class);
		}
		public TransinfoContext transinfo(int i) {
			return getRuleContext(TransinfoContext.class,i);
		}
		public TransContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterTrans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitTrans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitTrans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransContext trans() throws RecognitionException {
		TransContext _localctx = new TransContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_trans);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__11);
			setState(101);
			match(T__4);
			setState(102);
			match(T__8);
			setState(103);
			transinfo();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(104);
				match(T__1);
				setState(105);
				transinfo();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataSourceContext extends ParserRuleContext {
		public KafkaSourceContext kafkaSource() {
			return getRuleContext(KafkaSourceContext.class,0);
		}
		public HbaseSourceContext hbaseSource() {
			return getRuleContext(HbaseSourceContext.class,0);
		}
		public MysqlSourceContext mysqlSource() {
			return getRuleContext(MysqlSourceContext.class,0);
		}
		public DataSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterDataSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitDataSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitDataSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataSourceContext dataSource() throws RecognitionException {
		DataSourceContext _localctx = new DataSourceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataSource);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				kafkaSource();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				hbaseSource();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				mysqlSource();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HbaseSourceContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(MingBdJSONParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(MingBdJSONParser.STRING, i);
		}
		public HbaseSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hbaseSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterHbaseSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitHbaseSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitHbaseSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HbaseSourceContext hbaseSource() throws RecognitionException {
		HbaseSourceContext _localctx = new HbaseSourceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_hbaseSource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__0);
			setState(119);
			match(T__12);
			setState(120);
			match(T__4);
			setState(121);
			match(STRING);
			setState(122);
			match(T__1);
			setState(123);
			match(T__13);
			setState(124);
			match(T__4);
			setState(125);
			match(STRING);
			setState(126);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MysqlSourceContext extends ParserRuleContext {
		public MysqlInfoContext mysqlInfo() {
			return getRuleContext(MysqlInfoContext.class,0);
		}
		public MysqlSchemaContext mysqlSchema() {
			return getRuleContext(MysqlSchemaContext.class,0);
		}
		public TerminalNode STRING() { return getToken(MingBdJSONParser.STRING, 0); }
		public MysqlSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mysqlSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterMysqlSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitMysqlSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitMysqlSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MysqlSourceContext mysqlSource() throws RecognitionException {
		MysqlSourceContext _localctx = new MysqlSourceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mysqlSource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__0);
			setState(129);
			match(T__14);
			setState(130);
			match(T__4);
			setState(131);
			mysqlInfo();
			setState(132);
			match(T__1);
			setState(133);
			match(T__15);
			setState(134);
			match(T__4);
			setState(135);
			mysqlSchema();
			setState(136);
			match(T__1);
			setState(137);
			match(T__16);
			setState(138);
			match(T__4);
			setState(139);
			match(STRING);
			setState(140);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MysqlInfoContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(MingBdJSONParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(MingBdJSONParser.STRING, i);
		}
		public MysqlInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mysqlInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterMysqlInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitMysqlInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitMysqlInfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MysqlInfoContext mysqlInfo() throws RecognitionException {
		MysqlInfoContext _localctx = new MysqlInfoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mysqlInfo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__0);
			setState(143);
			match(T__17);
			setState(144);
			match(T__4);
			setState(145);
			match(STRING);
			setState(146);
			match(T__1);
			setState(147);
			match(T__18);
			setState(148);
			match(T__4);
			setState(149);
			match(STRING);
			setState(150);
			match(T__1);
			setState(151);
			match(T__19);
			setState(152);
			match(T__4);
			setState(153);
			match(STRING);
			setState(154);
			match(T__1);
			setState(155);
			match(T__20);
			setState(156);
			match(T__4);
			setState(157);
			match(STRING);
			setState(158);
			match(T__1);
			setState(159);
			match(T__21);
			setState(160);
			match(T__4);
			setState(161);
			match(STRING);
			setState(162);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MysqlSchemaContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(MingBdJSONParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(MingBdJSONParser.STRING, i);
		}
		public MysqlSchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mysqlSchema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterMysqlSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitMysqlSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitMysqlSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MysqlSchemaContext mysqlSchema() throws RecognitionException {
		MysqlSchemaContext _localctx = new MysqlSchemaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mysqlSchema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(T__8);
			setState(165);
			match(STRING);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(166);
				match(T__1);
				setState(167);
				match(STRING);
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransinfoContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public TransinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transinfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterTransinfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitTransinfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitTransinfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransinfoContext transinfo() throws RecognitionException {
		TransinfoContext _localctx = new TransinfoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_transinfo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			select();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public List<TerminalNode> STRING() { return getTokens(MingBdJSONParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(MingBdJSONParser.STRING, i);
		}
		public GroupByContext groupBy() {
			return getRuleContext(GroupByContext.class,0);
		}
		public List<FilterContext> filter() {
			return getRuleContexts(FilterContext.class);
		}
		public FilterContext filter(int i) {
			return getRuleContext(FilterContext.class,i);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MingBdJSONListener ) ((MingBdJSONListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MingBdJSONVisitor ) return ((MingBdJSONVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}
